[metadata]
description-file = README.rst
name = example-pkg-joaodath
version = 0.0.3
author = Example Author
author_email = author@example.com
url = https://github.com/joaodath/kan-alexandria
project_urls =
    Bug Tracker = https://github.com/joaodath/kan-alexandria/issues
classifiers =
    Programming Language :: Python :: 3,
    License :: OSI Approved :: Apache Software License,
    Operating System :: OS Independent,
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Text Processing :: Linguistic',
    'Topic :: Utilities',

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[wheel]
universal = 1
